--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+# For setup-master API only (get from Supabase → Settings → API → service_role)
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
