Describe your changes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
-# For setup-master API only (get from Supabase → Settings → API → service_role)
+# Required for Master save & setup-master (Supabase → Settings → API → service_role)
+# Must be set in Vercel env for save to work on production
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
