Add connection checker, Refresh button, Supabase setup guide

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your_project_url
+# Supabase – Get these from https://supabase.com/dashboard → Your Project → Settings → API
+# Your project URL (e.g. https://pixvfdqxrgslkrfswopn.supabase.co)
+NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
+# anon public key (safe for client)
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
-# Required for Master save & setup-master (Supabase → Settings → API → service_role)
-# Must be set in Vercel env for save to work on production
+# service_role key (SECRET – server only, required for Master save, wedding delete)
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
